--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1047,7 +1047,7 @@ comes from a user who was just wondering whether we could do something to make t
 in continuous integration \cite{make-ci-runs-faster}. Shortly after learning more about our active
 goals regarding performance at that time, he decided to do some useful research himself
 and provided us with its helpful results. What is more, he was so excited about the possible
-improvements that he decided to contribute and has implemented them \cite{user-contribution-1}.
+improvements that he decided to contribute and implemented them \cite{user-contribution-1}.
 
 So far, cargo-semver-checks has earned the trust of many projects' maintainers. Among them are some
 of the largest and most iconic Rust crates, such as tokio (library for concurrent programming)
