--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,38 +754,68 @@ TODO:
 
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
 amongst the one thousand most downloaded Rust crates.
-This section presents the results we got and the following one (\ref{r:section_generating_witnesses})
-describes how we managed to obtain them.
+This section is a presentation of all the results we got. To learn more about
+how we managed to obtain them, see section \ref{r:section_generating_witnesses}.
 
-TODO: calculate Xi constants.
+We considered only non-yanked releases of those crates which were published
+after 2017-01-01 and are not a major change. From those releases,
+919 did not compile on our machines with the current version of Rust.
+Thus, we considered 14 389 releases in total (which is also the number of times
+cargo-semver-checks has been ran).
 
-Those crates have X0 total releases (at the time of writing)
-that were published after XX-XX-XXXX, X1 of which do not compile anymore with the current version of Rust
-and X2 of the remaining ones were yanked.
-
-From the X3 non-yanked releases which we were able to compile,
-\textbf{in X4 of them we found one or more semver breaks}.
-In total, different lints were triggered X5 times with X6 items reported (one release can trigger multiple lints, each of them reporting multiple items in the sourcecode that broke semver).
+From those non-yanked, non-major releases which we were able to compile,
+\textbf{in 470 of them we found one or more semver breaks}.
+This means that on average every 1 in 30 releases that we checked had at least one semver break.
+Those releases are in 173 different crates (out of 1000).
+In total, different lints were triggered 655 times and reported 3305 items. 
+(one release can trigger multiple lints, each of them reporting multiple items in the source code that broke semver).
 
 For every true-positive we constructed a \texttt{witness} -- a short Rust code
 proving that a particular item indeed breaks server.
-Each witness can be compiled using one version of a crate
+Each witness can be compiled using one version of a crate,
 but results in a compilation error for the other version.
-Moreover, for each result we have viewed its sourcecode to confirm
+Moreover, for each result we have viewed its source code to confirm
 that it is part of the public API accessible by the user. Thus, we are confident that each
 result is a real true-positive.
 
 The following table shows for each lint in how many releases it was triggered
 and how many items in total it has reported:
 
-X7-table
+\begin{center}
+	\begin{tabular}{p{7cm} p{2cm} p{2cm} p{2cm}}
+		\textbf{name of the lint} & \textbf{number of found items} & \textbf{number of different triggered releases} & \textbf{number of different triggered crates} \\ \hline
+		inherent\_method\_missing & $791$ & $41$ & $27$ \\
+		enum\_variant\_added & $387$ & $140$ & $60$ \\
+		constructible\_struct\_adds\_field & $343$ & $123$ & $34$ \\
+		auto\_trait\_impl\_removed & $318$ & $57$ & $45$ \\
+		struct\_missing & $291$ & $66$ & $40$ \\
+		function\_missing & $265$ & $50$ & $33$ \\
+		inherent\_method\_must\_use\_added & $239$ & $4$ & $4$ \\
+		inherent\_method\_const\_removed & $139$ & $5$ & $3$ \\
+		derive\_trait\_impl\_removed & $115$ & $11$ & $11$ \\
+		enum\_variant\_missing & $112$ & $27$ & $18$ \\
+		struct\_pub\_field\_missing & $79$ & $32$ & $16$ \\
+		enum\_missing & $78$ & $26$ & $20$ \\
+		trait\_missing & $45$ & $24$ & $19$ \\
+		method\_parameter\_count\_changed & $22$ & $14$ & $12$ \\
+		enum\_marked\_non\_exhaustive & $17$ & $4$ & $4$ \\
+		struct\_repr\_c\_removed & $12$ & $3$ & $3$ \\
+		constructible\_struct\_adds\_private\_field & $9$ & $7$ & $6$ \\
+		inherent\_method\_unsafe\_added & $9$ & $3$ & $3$ \\
+		function\_parameter\_count\_changed & $8$ & $4$ & $4$ \\
+		function\_unsafe\_added & $8$ & $2$ & $2$ \\
+		unit\_struct\_changed\_kind & $5$ & $3$ & $2$ \\
+		enum\_tuple\_variant\_field\_missing & $4$ & $2$ & $2$ \\
+		tuple\_struct\_to\_plain\_struct & $4$ & $2$ & $2$ \\
+		enum\_tuple\_variant\_field\_added & $3$ & $3$ & $3$ \\
+		enum\_repr\_int\_removed & $1$ & $1$ & $1$ \\
+		enum\_struct\_variant\_field\_added & $1$ & $1$ & $1$ \\
+	\end{tabular}
+\end{center}
 
-X8-explain-implications
-
-All of the detected true-positives (with their witnesses) can be found in a GitHub repository [X10]
-in both human-readable and machine-readable form.
-All of the results (both true-positives and false-positives / bugs) are provided
-in a human-readable form.
+All of the detected true-positives (with their witnesses) can be found in a GitHub repository \cite{github-csv-results}.
+They are provided in both human-readable and machine-readable form.
+The remaining results (false-positives and bugs) are provided only in human-readable form.
 
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
@@ -1223,6 +1253,11 @@ TODO:
 % 	\textit{cargo-semver-checks} (2023) \\
 % 	\url{https://github.com/obi1kenobi/cargo-semver-checks}
 
+%%% section 6.1 links
+
+\bibitem{github-csv-results} GitHub,
+	\textit{GitHub repository containing the semver-crater results} (2023) \\
+	\url{https://github.com/tonowak/bachelors-thesis/}
 
 %%% section 7.2 links
 
