--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1012,9 +1012,7 @@ recent one. However, with pre-builds now available, more and more projects
 decide to get them directly from the GitHub repository for CI usage
 rather than download the tool from crates.io.
 This has lowered
-the average downloads of cargo-semver-checks, but by no means decreased the tool's popularity --
-quite the contrary, as the current number of over 2 000 downloads per release better reflects
-how many repositories actively use cargo-semver-checks.
+the average downloads of cargo-semver-checks, but by no means decreased the tool's popularity.
 
 Another measure of cargo-semver-checks' recognition among the community are GitHub stars.
 Every user can star any repositories they like, no matter whether they want to show
