remove the Arch part

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1054,10 +1054,9 @@ of the largest and most iconic Rust crates, such as tokio (library for concurren
 and libp2p (modular library for peer-to-peer networking). There are also numerous projects from
 companies widely known outside the Rust community as well -- the tool has been adopted by Amazon,
 Microsoft and Mozilla. Developers have even built third party integrations to bring
-cargo-semver-checks into other systems -- the tool is available in nixOS, has been introduced
-into release managers like release-plz, and is used by Arch Linux distribution.
-With those and many more usage scenarios, cargo-semver-checks has proven its versatility
-in the vast, diverse world of semantic versioning.
+cargo-semver-checks into other systems -- the tool is available in nixOS and has been introduced
+into release managers like release-plz. With those and many more usage scenarios,
+cargo-semver-checks has proven its versatility in the vast, diverse world of semantic versioning.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
