--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -980,11 +980,28 @@ and immediate contact with him through chat).
 \chapter{Conclusion}\label{r:chapter_conclusion}
 
 \section{The significance of our contributions}\label{r:section_significance_of_contributions}
+After several months of constant development, the tool has gained numerous new features as well as
+stability and performance improvements. It has acquired recognition among the developers
+over time as it became faster, easier to add to one's project and gained additional lints
+preventing even more semver breaks.
 
-TODO:
-\begin{itemize}
-	\item write a conclusion
-\end{itemize}
+During the research that we conducted in chapter \ref{r:chapter_results_popular_crates},
+the tool has proven its reliability in varying conditions of the most popular Rust packages,
+furthermore reaffirming the value and benefits it has to offer the developers.
+
+After all of our contributions, the tool's ultimate goal of becoming a built-in feature of cargo
+seems closer than it has ever been before. More and more users decide to add the tool to their
+production processes. Moreover, it is not only the packages' maintainers, but also all of
+the packages' dependants who profit from the tool's presence in the crate's repository. Thus its
+actual impact and the group of beneficiaries are much greater than the number of repositories
+using it may suggest.
+
+In conclusion, the final outcome of our work has been an order of magnitude greater than
+we expected. Already since the early days of our contributions we could see the constant increase
+in the tool's usage as it was growing to its current, well-estabilished position in the world
+of Rust. With that, we firmly believe that its future is bright and are happy to already see it
+making such an impact, hoping to soon allow everyone to be fearless about running
+\texttt{cargo update} on their projects.
 
 \section{Rust community's positive response to the tool}\label{r:section_community_response}
 
