--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,7 +754,7 @@ TODO:
 % chapter semver-crater
 \chapter{Tool's findings in popular crates}\label{r:chapter_results_popular_crates}
 
-\section{Statistics on found true-positives}\label{r:section_results_statistics}
+\section{Statistics on real-world violations of semver}\label{r:section_results_statistics}
 
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
 amongst the one thousand most downloaded Rust crates.
