--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -759,7 +759,7 @@ TODO:
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
 amongst the one thousand most downloaded Rust crates.
 This section is a presentation of all the results we got. To learn more about
-how we managed to obtain them, see section \ref{r:section_generating_witnesses}.
+our methodology, see section \ref{r:section_generating_witnesses}.
 
 We considered only non-yanked releases of those crates which were published
 after 2017-01-01 and are not a major change. From those releases,
