--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -762,7 +762,7 @@ This section is a presentation of all the results we got. To learn more about
 our methodology, see section \ref{r:section_generating_witnesses}.
 
 We considered only non-yanked releases of those crates which were published
-after 2017-01-01 and are not a major change. From those releases,
+after 2017-01-01 and are not major version updates compared to the prior release. From those releases,
 919 did not compile on our machines with the current version of Rust.
 Thus, we considered 14 389 releases in total (which is also the number of times
 cargo-semver-checks has been ran).
