--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -829,7 +829,7 @@ and how many items in total it has reported:
 	\end{tabular}
 \end{table}
 
-All of the detected true-positives (with their witnesses) can be found in a GitHub repository \cite{github-csv-results}.
+All of the detected semver violations, together with their witnesses, can be found in our GitHub repository \cite{github-csv-results}.
 They are provided in both human-readable and machine-readable form.
 The remaining results (false-positives and bugs) are provided only in human-readable form.
 
