--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -831,7 +831,7 @@ and how many items in total it has reported:
 
 All of the detected semver violations, together with their witnesses, can be found in our GitHub repository \cite{github-csv-results}.
 They are provided in both human-readable and machine-readable form.
-The remaining results (false-positives and bugs) are provided only in human-readable form.
+The remaining results (`cargo-semver-checks` false-positive reports and bugs) are provided only in human-readable form.
 
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
