--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -835,7 +835,7 @@ The remaining results (`cargo-semver-checks` false-positive reports and bugs) ar
 
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
-Because cargo-semver-checks is able to create a rustdoc
+Because cargo-semver-checks is able to create a rustdoc JSON file
 from the registry of a particular crate and version,
 we thought of running the tool on a large number of existing crates
 to find true-positives and bugs (which mostly are false-positives or crashes).
