--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -775,7 +775,7 @@ In total, different lints were triggered 655 times and reported 3305 items.
 (one release can trigger multiple lints, each of them reporting multiple items in the source code that broke semver).
 
 We verified each reported semver violation by constructing a \texttt{witness} -- a short Rust code
-proving that a particular item indeed breaks server.
+proving that a particular release indeed breaks semver.
 Each witness can be compiled using one version of a crate,
 but results in a compilation error for the other version.
 Moreover, for each result we have viewed its source code to confirm
