--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -778,7 +778,7 @@ We verified each reported semver violation by constructing a \texttt{witness} --
 proving that a particular release indeed breaks semver.
 Each witness can be compiled using one version of a crate,
 but results in a compilation error for the other version.
-Moreover, for each result we have viewed its source code to confirm
+Moreover, for each result we have examined its source code to confirm
 that it is part of the public API accessible by the user. Thus, we are confident that each
 result is a real true-positive.
 
