--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -779,7 +779,7 @@ proving that a particular release indeed breaks semver.
 Each witness can be compiled using one version of a crate,
 but results in a compilation error for the other version.
 Moreover, for each result we have examined its source code to confirm
-that it is part of the public API accessible by the user. Thus, we are confident that each
+that it is part of the public API accessible by the user and not marked \texttt{\#[doc(hidden)]}. Thus, we are confident that each
 result is a real true-positive.
 
 The following table shows for each lint in how many releases it was triggered
