--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -760,7 +760,7 @@ Throughout our contributions to the project, we managed to fix the following bug
 	\item broken links appearing in the tool's output,
 	\item false-positives from target-specific optional features,
 	\item rustdoc command's output showing up without colors,
-	\item compilation error which happened because of changes
+	\item compilation error which happened because of semver-incompliant changes
 		in one of the tool's dependencies,
 	\item the rustdoc of the current and the baseline crates overwriting each other,
 	\item CLI choosing the latest release from the registry as a baseline version
