--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -776,8 +776,8 @@ In total, different lints were triggered 655 times and reported 3305 items.
 
 We verified each reported semver violation by constructing a \texttt{witness} -- a short Rust code
 proving that a particular release indeed breaks semver.
-Each witness can be compiled using one version of a crate,
-but results in a compilation error for the other version.
+Each witness can be compiled using one release of a crate,
+but results in a compilation error for the other release.
 Moreover, for each result we have examined its source code to confirm
 that it is part of the public API accessible by the user and not marked \texttt{\#[doc(hidden)]}. Thus, we are confident that each
 result is a semver violation that is a true-positive.
@@ -836,7 +836,7 @@ The remaining results (`cargo-semver-checks` false-positive reports and bugs) ar
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
 Because cargo-semver-checks is able to create a rustdoc JSON file
-from the registry of a particular crate and version,
+from the registry of a particular crate and release,
 we thought of running the tool on a large number of existing crates
 to find semver violations and bugs (which mostly are false-positives or crashes).
 We developed a tool for this purpose and called it \texttt{semver-crater}
@@ -846,8 +846,8 @@ new compilator versions on a large number of crates).
 It fetches a list of one thousand crates available on crates.io, sorted by the number of
 all-time downloads (thus, they are often the biggest crates and libraries
 that strictly adhere to semantic versioning). For each crate,
-it then retrieves the available versions which were not yanked
-and compares every two adjacent, non-yanked versions and parses the output.
+it then retrieves the available releases which were not yanked
+and compares every two adjacent, non-yanked releases and parses the output.
 The results (which take several days to generate) are saved to a CSV file.
 
 Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces false-positives
@@ -877,7 +877,7 @@ We came up with two solutions:
 		parsing the output to know which items were removed.
 	\item As a way to know whether a reported item is a false-positive or a true-positive,
 		we created a witness (more on that in section \ref{r:witness_generation})
-		and ignored all items whose witnesses compile on both baseline and current versions.
+		and ignored all items whose witnesses compile on both baseline and current releases.
 \end{itemize}
 
 Those two techniques greatly reduced the number of reports.
@@ -901,7 +901,7 @@ Both crates must have exactly the same code (same \texttt{src/lib.rs} file),
 but slightly different manifests.
 Thus, a witness is made of just three short files -- a source code that uses the item that
 broke semver and two manifests that only differ in the \texttt{[dependency]} section
-(they have the same crate name as a dependency, but two different versions of it).
+(they have the same crate name as a dependency, but two different releases of it).
 
 The output of each lint in cargo-semver-checks contains a list of importable paths
 of items that it was triggered by, which is enough to construct some of the witnesses automatically.
