registry vs crate

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -836,7 +836,7 @@ The remaining results (`cargo-semver-checks` false-positive reports and bugs) ar
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
 Because cargo-semver-checks is able to create a rustdoc JSON file
-from the registry of a particular crate and release,
+of a particular crate and release from the registry,
 we thought of running the tool on a large number of existing crates
 to find semver violations and bugs (which mostly are false-positives or crashes).
 We developed a tool for this purpose and called it \texttt{semver-crater}
