--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -767,10 +767,12 @@ after 2017-01-01 and are not major version updates compared to the prior release
 Thus, we considered 14 389 releases in total (which is also the number of times
 cargo-semver-checks has been ran).
 
-From those non-yanked, non-major releases which we were able to compile,
-\textbf{in 470 of them we found one or more semver violations}.
-This means that on average every 1 in 30 releases that we checked had at least one semver violation.
-All in all, we found semver violations in 173 crates of the 1000 crates we scanned, slightly more than 1 in 6.
+From those non-yanked, non-major releases which we were able to compile, we found that
+on average \textbf{every 1 in 30 releases had at least one semver violation}
+-- we found one or more violations in 470 of them.
+All in all, we found semver violations in slightly \textbf{more than 1 in 6 crates}
+-- that is, in 173 crates of the 1000 crates we scanned.
+
 In total, we discovered 3305 different instances of semver violations across all releases.
 We found that the same release frequently contained more than one instance of the same kind of semver violation:
 for example, a release could have removed multiple functions. Ignoring multiple instances
