table column names

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -798,10 +798,10 @@ and how many items in total it has reported:
 		>{\centering\arraybackslash}m{.15\linewidth} |
 		}
 		\hline
-			{\textbf{name of the lint}} &
-			{\textbf{number of found items}} &
-			{\textbf{number of different triggered releases}} &
-			{\textbf{number of different triggered crates}} \\
+			{\textbf{name of the lint in cargo-semver-checks}} &
+			{\textbf{number of individual instances where the lint found a violation}} &
+			{\textbf{number of releases where the lint found a violation}} &
+			{\textbf{number of crates where the lint found a violation}} \\
 		\hline
 		inherent\_method\_missing & $791$ & $41$ & $27$ \\
 		enum\_variant\_added & $387$ & $140$ & $60$ \\
