--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -786,8 +786,7 @@ Moreover, for each result we have examined its source code to confirm
 that it is part of the public API accessible by the user and not marked \texttt{\#[doc(hidden)]}. Thus, we are confident that each
 result is a semver violation that is a true-positive.
 
-The following table shows for each lint in how many releases it was triggered
-and how many items in total it has reported:
+The following table shows for each lint how often it was triggered:
 
 \begin{table}[h]
 	\centering
