--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -987,7 +987,7 @@ preventing even more semver breaks.
 
 During the research that we conducted in chapter \ref{r:chapter_results_popular_crates},
 the tool has proven its reliability in varying conditions of the most popular Rust packages,
-furthermore reaffirming the value and benefits it has to offer the developers.
+further reaffirming the value and benefits it has to offer the developers.
 
 After all of our contributions, the tool's ultimate goal of becoming a built-in feature of cargo
 seems closer than it has ever been before. More and more users decide to add the tool to their
