--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -992,7 +992,7 @@ further reaffirming the value and benefits it has to offer the developers.
 After all of our contributions, the tool's ultimate goal of becoming a built-in feature of cargo
 seems closer than it has ever been before. More and more users decide to add the tool to their
 production processes. Moreover, it is not only the packages' maintainers, but also all of
-the packages' dependants who profit from the tool's presence in the crate's repository. Thus its
+the packages' dependents who benefit from the tool's presence in the crate's repository. Thus its
 actual impact and the group of beneficiaries are much greater than the number of repositories
 using it may suggest.
 
