--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -996,7 +996,7 @@ the packages' dependents who benefit from the tool's presence in the crate's rep
 actual impact and the group of beneficiaries are much greater than the number of repositories
 using it may suggest.
 
-In conclusion, the final outcome of our work has been an order of magnitude greater than
+The final impact of our work has been an order of magnitude greater than
 we expected. Already since the early days of our contributions we could see the constant increase
 in the tool's usage as it was growing to its current, well-estabilished position in the world
 of Rust. With that, we firmly believe that its future is bright and are happy to already see it
