--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -997,7 +997,7 @@ actual impact and the group of beneficiaries are much greater than the number of
 using it may suggest.
 
 The final impact of our work has been an order of magnitude greater than
-we expected. Already since the early days of our contributions we could see the constant increase
+we expected. Since the early days of our contributions, we could see the constant increase
 in the tool's usage as it was growing to its current, well-estabilished position in the world
 of Rust. With that, we firmly believe that its future is bright and are happy to already see it
 making such an impact, hoping to soon allow everyone to be fearless about running
