--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -998,8 +998,8 @@ using it may suggest.
 
 The final impact of our work has been an order of magnitude greater than
 we expected. Since the early days of our contributions, we could see the constant increase
-in the tool's usage as it was growing to its current, well-estabilished position in the world
-of Rust. With that, we firmly believe that its future is bright and are happy to already see it
+in the tool's usage as it was growing to its current, well-estabilished position in the Rust
+ecosystem. With that, we firmly believe that its future is bright and are happy to already see it
 making such an impact, hoping to soon allow everyone to be fearless about running
 \texttt{cargo update} on their projects.
 
