--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1050,7 +1050,7 @@ resulted in the tool's undoubtful success:
 	\item regular implementation of new lints that increased the tool's effectiveness,
 	\item introduction of the pre-built executable binaries with their ease of use,
 	\item release and improvements of the GitHub action for continuous integration,
-	\item numerous optimalizations of the tool's performance (done both by us in
+	\item numerous optimizations of the tool's performance (done both by us in
 		cargo-semver-checks and by our mentor in the trustfall engine),
 	\item staying in touch with the tool's users and addressing their requests and suggestions,
 	\item regular tweets and blog posts by our mentor, giving the community insight into our work
