--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1051,7 +1051,7 @@ resulted in the tool's undoubtful success:
 	\item introduction of the pre-built executable binaries with their ease of use,
 	\item release and improvements of the GitHub action for continuous integration,
 	\item numerous optimizations of the tool's performance (done both by us in
-		cargo-semver-checks and by our mentor in the trustfall engine),
+		cargo-semver-checks and by our mentor in the Trustfall engine),
 	\item staying in touch with the tool's users and addressing their requests and suggestions,
 	\item regular tweets and blog posts by our mentor, giving the community insight into our work
 		as well as announcements of upcoming features before new releases.
