--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1069,8 +1069,8 @@ improvements that he decided to contribute and implemented them \cite{user-contr
 So far, cargo-semver-checks has earned the trust of many projects' maintainers. Among them are some
 of the largest and most iconic Rust crates, such as tokio (library for concurrent programming)
 and libp2p (modular library for peer-to-peer networking). There are also numerous projects from
-companies widely known outside the Rust community as well -- the tool has been adopted by Amazon,
-Microsoft and Mozilla. Developers have even built third party integrations to bring
+companies widely known outside the Rust community that adopted the tool as well, including Amazon,
+Microsoft, Adobe and Mozilla. Developers have even built third party integrations to bring
 cargo-semver-checks into other systems -- the tool is available in nixOS and has been introduced
 into release managers like release-plz. With those and many more usage scenarios,
 cargo-semver-checks has proven its versatility in the vast, diverse world of semantic versioning.
