--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -980,10 +980,10 @@ and immediate contact with him through chat).
 \chapter{Conclusion}\label{r:chapter_conclusion}
 
 \section{The significance of our contributions}\label{r:section_significance_of_contributions}
-After several months of constant development, the tool has gained numerous new features as well as
-stability and performance improvements. It has acquired recognition among the developers
-over time as it became faster, easier to add to one's project and gained additional lints
-preventing even more semver breaks.
+After several months of constant development, the tool has found recognition among the developers
+as it became faster, easier to add to one's project and gained additional lints preventing
+even more semver breaks. Numerous new features have been introduced frequently,
+as well as stability and performance improvements.
 
 During the research that we conducted in chapter \ref{r:chapter_results_popular_crates},
 the tool has proven its reliability in varying conditions of the most popular Rust packages,
