--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -982,8 +982,8 @@ and immediate contact with him through chat).
 \section{The significance of our contributions}\label{r:section_significance_of_contributions}
 After several months of constant development, the tool has found recognition among the developers
 as it became faster, easier to add to one's project and gained additional lints preventing
-even more semver breaks. Numerous new features have been introduced frequently,
-as well as stability and performance improvements.
+even more semver breaks. Numerous new features together with stability and performance improvements
+have been introduced frequently as well to further increase its popularity.
 
 During the research that we conducted in chapter \ref{r:chapter_results_popular_crates},
 the tool has proven its reliability in varying conditions of the most popular Rust packages,
