--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -765,7 +765,7 @@ We considered only non-yanked releases of those crates which were published
 after 2017-01-01 and are not major version updates compared to the prior release. From those releases,
 919 did not compile on our machines with the current version of Rust.
 Thus, we considered 14 389 releases in total (which is also the number of times
-cargo-semver-checks has been ran).
+cargo-semver-checks has been run).
 
 From those non-yanked, non-major releases which we were able to compile, we found that
 on average \textbf{every 1 in 30 releases had at least one semver violation}
