--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -770,7 +770,7 @@ cargo-semver-checks has been run).
 From those non-yanked, non-major releases which we were able to compile, we found that
 on average \textbf{every 1 in 30 releases had at least one semver violation}
 -- we found one or more violations in 470 of them.
-All in all, we found semver violations in slightly \textbf{more than 1 in 6 crates}
+All in all, we found semver violations in slightly more than \textbf{1 in 6 crates}
 -- that is, in 173 crates of the 1000 crates we scanned.
 
 In total, we discovered 3305 different instances of semver violations across all releases.
